--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,19 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "awx-web-task.fullname" . }}
+  name: {{ template "ansible-awx.fullname" . }}
   labels:
-    app: {{ template "awx-web-task.name" . }}
+    app: {{ template "ansible-awx.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: 80
+      targetPort: 8052
       protocol: TCP
-      name: {{ .Values.service.name }}
   selector:
-    app: {{ template "awx-web-task.name" . }}
+    app: {{ template "ansible-awx.name" . }}
     release: {{ .Release.Name }}
