--- a/values.yaml
+++ b/values.yaml
@@ -2,22 +2,27 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
-image:
-  repository: ansible/awx_task
-  tag: latest
-  pullPolicy: IfNotPresent
+awx_web:
+  image:
+    repository: ansible/awx_web
+    tag: latest
+    pullPolicy: Always
+
+awx_task:
+  image:
+    repository: ansible/awx_task
+    tag: latest
+    pullPolicy: Always
 service:
   name: nginx
   type: ClusterIP
-  externalPort: 80
-  internalPort: 80
 ingress:
-  enabled: false
+  enabled: true
   # Used to create an Ingress record.
   hosts:
     - chart-example.local
   annotations:
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   tls:
     # Secrets must be manually created in the namespace.
@@ -35,3 +40,23 @@ resources: {}
   # requests:
   #  cpu: 100m
   #  memory: 128Mi
+secretkey: awxsecret
+adminUser: admin
+adminPassword: password
+
+# subchart values
+postgresql:
+  persistence:
+    enabled: true
+    accessModes:
+      - ReadWriteOnce
+    size: 8Gi
+  postgresqlUsername: awx
+  postgresqlPassword: awxpass
+  postgresqlDatabase: awx
+rabbitmq:
+  rabbitmq:
+    username: guest
+    password: guest
+memcached:
+  replicaCount: 1
