--- a/templates/_rabbitmq.yaml
+++ b/templates/_rabbitmq.yaml
@@ -36,5 +36,5 @@ Return the rabbitmq vhost
 {{- if .Values.rabbitmq.vhost -}}
 {{- .Values.rabbitmq.vhost -}}
 {{- end -}}
-{{- printf "/" -}}
+{{- printf "" -}}
 {{- end -}}
