--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -81,6 +81,15 @@ spec:
                 secretKeyRef:
                   name: {{ template "ansible-awx.fullname" . }}
                   key: awx-secretkey
+          volumeMounts:
+            - mountPath: /etc/tower
+              name: awx-application-config
+              readOnly: true
+            # - mountPath: /etc/tower/conf.d/
+            #   name: secrets.py
+            #   readOnly: true
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
         - name: "{{ .Chart.Name }}-task"
           image: "{{ .Values.awx_task.image.repository }}:{{ .Values.awx_task.image.tag }}"
           imagePullPolicy: {{ .Values.awx_task.image.pullPolicy }}
@@ -127,8 +136,30 @@ spec:
                 secretKeyRef:
                   name: {{ template "ansible-awx.fullname" . }}
                   key: awx-secretkey
+          volumeMounts:
+            - mountPath: /etc/tower
+              name: awx-application-config
+              readOnly: true
+            # - mountPath: /etc/tower/conf.d/
+            #   name: secrets.py
+            #   readOnly: true
           resources:
 {{ toYaml .Values.resources | indent 12 }}
+      volumes:
+        - configMap:
+            defaultMode: 420
+            items:
+            - key: settings.py
+              path: settings.py
+            name: {{ template "ansible-awx.fullname" . }}-config
+          name: awx-application-config
+        # - configMap:
+        #     defaultMode: 420
+        #     items:
+        #     - key: secrets.py
+        #       path: secrets.py
+        #     name: awx-secrets-config
+        #   name: awx-application-config
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
