--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,9 +19,6 @@ spec:
         app: {{ template "ansible-awx.name" . }}
         release: {{ .Release.Name }}
     spec:
-      securityContext:
-        runAsUser: 0
-        fsGroup: 0
       containers:
         - name: "{{ .Chart.Name }}-web"
           image: "{{ .Values.awx_web.image.repository }}:{{ .Values.awx_web.image.tag }}"
@@ -30,14 +27,6 @@ spec:
             - name: http
               containerPort: 8052
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 8052
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 8052
           env:
             - name: DATABASE_NAME
               value: {{ template "ansible-awx.postgresql.database" . }}
@@ -85,12 +74,11 @@ spec:
             - mountPath: /etc/tower
               name: awx-application-config
               readOnly: true
-            # - mountPath: /etc/tower/conf.d/
-            #   name: secrets.py
-            #   readOnly: true
           resources:
 {{ toYaml .Values.resources | indent 12 }}
         - name: "{{ .Chart.Name }}-task"
+          securityContext:
+            privileged: true
           image: "{{ .Values.awx_task.image.repository }}:{{ .Values.awx_task.image.tag }}"
           imagePullPolicy: {{ .Values.awx_task.image.pullPolicy }}
           env:
@@ -140,9 +128,6 @@ spec:
             - mountPath: /etc/tower
               name: awx-application-config
               readOnly: true
-            # - mountPath: /etc/tower/conf.d/
-            #   name: secrets.py
-            #   readOnly: true
           resources:
 {{ toYaml .Values.resources | indent 12 }}
       volumes:
@@ -153,13 +138,6 @@ spec:
               path: settings.py
             name: {{ template "ansible-awx.fullname" . }}-config
           name: awx-application-config
-        # - configMap:
-        #     defaultMode: 420
-        #     items:
-        #     - key: secrets.py
-        #       path: secrets.py
-        #     name: awx-secrets-config
-        #   name: awx-application-config
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
